# shillelagh

./: .cirrus.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  ARCHITECTURE.rst  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  Makefile  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  python-integration.yml  python-package-daily.yml  python-package.yml  python-publish.yml
docker/: docker-compose.yml  ftp.Dockerfile  init.sql  postgres.Dockerfile  sftp.Dockerfile
docker/data/: test.csv
docs/: adapters.rst  conf.py  development.rst  index.rst  install.rst  postgres.rst  sqlglot.rst  usage.rst
examples/: csvfile.py  csvfile_ftp.py  csvfile_sftp.py  dataframe.py  datasette.py  dbt.py  generic_json.py  generic_xml.py  github.py  gsheets.py  opensea.py  postgres.py  preset.py  semantic_api.py  socrata.py  test.csv  virtual.py  weatherapi.py
postgres/: Dockerfile  docker-compose.yml  entrypoint.sh
requirements/: base.txt  test.in  test.txt
shillelagh/: db.py  demo.py  grammar.py  results.py  weather.py
shillelagh/grammar/: sqlite.peg
src/shillelagh/: __init__.py  console.py  db.py  exceptions.py  fields.py  filters.py  functions.py  lib.py  table.py  types.py  typing.py
src/shillelagh/adapters/: base.py  registry.py  utils.py  weatherapi.py
src/shillelagh/adapters/api/: cpes.py  cves.py  cwes.py  datasette.py  dbt_metricflow.py  generic_json.py  generic_xml.py  github.py  google_analytics.py  gsheets.py  html_table.py  nglsapi.py  opensea.py  panoramix.py  preset.py  s3select.py  semantic_api.py  socrata.py  system.py  weatherapi.py
src/shillelagh/adapters/api/google_analytics/: adapter.py  constants.py
src/shillelagh/adapters/api/gsheets/: adapter.py  exceptions.py  fields.py  lib.py  pattern.py  types.py  typing.py
src/shillelagh/adapters/api/gsheets/parsing/: base.py  date.py  number.py  pattern.py
src/shillelagh/adapters/file/: csvfile.py  http_file.py
src/shillelagh/adapters/memory/: holidays.py  pandas.py  virtual.py
src/shillelagh/backends/apsw/: db.py  dialect.py  table.py  vt.py
src/shillelagh/backends/apsw/dialects/: base.py  google_analytics.py  gsheets.py  metricflow.py  ngls.py  safe.py  semantic_api.py  simple.py
src/shillelagh/backends/multicorn/: db.py  fdw.py
src/shillelagh/backends/multicorn/dialects/: base.py
src/shillelagh/backends/sqlglot/: db.py  db_async.py
src/shillelagh/backends/sqlglot/dialects/: base.py
src/shillelagh/resources/: base.py  ftp.py  http.py  resource.py  sftp.py
talks/: Designated Driver Episode #5 • Shillelagh.mkv
templates/adapter/: cookiecutter.json
templates/adapter/hooks/: post_gen_project.sh
templates/adapter/{{cookiecutter.slug}}/: test_{{cookiecutter.slug}}.py  {{cookiecutter.slug}}.py
test/: README.md  test_ngls_alchemy_dialect.py
tests/: conftest.py  console_test.py  context.py  fakes.py  fields_test.py  filters_test.py  functions_test.py  lib_test.py  test_console.py  test_db.py  test_fields.py  test_filters.py  test_functions.py  test_lib.py  test_results.py  test_table.py  test_types.py  travis_install.sh  types_test.py
tests/adapters/: base_test.py  registry_test.py  test_base.py  test_weatherapi.py
tests/adapters/api/: datasette_test.py  dbt_metricflow_test.py  generic_json_test.py  generic_xml_test.py  github_test.py  html_table_test.py  nglsapi_test.py  preset_test.py  s3select_test.py  semantic_api_test.py  socrata_test.py  system_test.py  test_datasette.py  test_github.py  test_gsheets.py  test_html_table.py  test_opensea.py  test_s3select.py  test_socrata.py  test_system.py  test_weatherapi.py  weatherapi_test.py
tests/adapters/api/gsheets/: adapter_test.py  fields_test.py  integration_test.py  lib_test.py  test_adapter.py  test_fields.py  test_integration.py  test_lib.py  test_pattern.py
tests/adapters/api/gsheets/parsing/: base_test.py  date_test.py  number_test.py  test_base.py  test_date.py  test_datetime.py  test_number.py  test_pattern.py
tests/adapters/file/: csvfile_test.py  test_csvfile.py
tests/adapters/memory/: holidays_test.py  pandas_test.py  test_pandas.py  virtual_test.py
tests/backends/apsw/: db_test.py  dbapi_test.py  test_db.py  test_dbapi.py  test_dialect.py  test_vt.py  vt_test.py
tests/backends/apsw/dialects/: base_test.py  gsheets_test.py  metricflow_test.py  ngls_test.py  safe_test.py  semantic_api_test.py  test_base.py  test_gsheets.py  test_safe.py  test_simple.py
tests/backends/multicorn/: db_test.py  fdw_test.py
tests/backends/multicorn/dialects/: base_test.py
tests/backends/sqlglot/: db_async_test.py  db_test.py
tests/backends/sqlglot/dialects/: base_test.py
tests/fakes/: __init__.py  cdc_data_response.json  cdc_metadata_response.json  datasette_columns_response.json  datasette_data_response.json  datasette_data_response_1.json  datasette_data_response_2.json  datasette_metadata_response.json  datasette_results.json  github_issues_response.json  github_pulls_response.json  github_single_response.json  incidents.json  weatherapi_response.json
tests/resources/: http_test.py  resource_test.py
tests/resources/ftp/: ftp_integration_test.py  ftp_test.py
tests/resources/sftp/: sftp_integration_test.py  sftp_test.py
