# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = shillelagh
description = Making it easy to query APIs via SQL
author = Beto Dealmeida
author-email = roberto@dealmeida.net
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/betodealmeida/shillelagh/
project-urls =
    Documentation = https://pyscaffold.org/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires = numpy; scipy
install_requires =
    apsw
    python_dateutil
    typing_extensions
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install shillelagh[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    pytest-mock
    pyfakefs
    requests-mock
    pre-commit
    requests
    requests-cache
    freezegun
    sqlalchemy
docs =
    sphinx
weatherapi =
    requests
    requests-cache
gsheetsapi =
    google-auth
sqlalchemy =
    sqlalchemy

[options.entry_points]
# Add here console scripts like:
shillelagh.adapter =
    csvfile = shillelagh.adapters.file.csvfile:CSVFile
    gsheetsapi = shillelagh.adapters.api.gsheets:GSheetsAPI
    weatherapi = shillelagh.adapters.api.weatherapi:WeatherAPI
sqlalchemy.dialects =
    shillelagh = shillelagh.backends.apsw.dialect:APSWDialect
    shillelagh.apsw = shillelagh.backends.apsw.dialect:APSWDialect
    gsheets = shillelagh.backends.apsw.dialect:APSWGSheetsDialect
# For example:
# console_scripts =
#     fibonacci = shillelagh.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov shillelagh --cov-report=term-missing:skip-covered
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[coverage:report]
fail_under = 100

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = shillelagh
